lib/tests/fixtures/compiler/parser/func_bad_optional.pp
function test($x = foo, $y)
{

}

test(foo)
